# clonepilot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  GOTCHAS.md  PROGRESS.md  README.md  SESSIONS.md  WAKEUP.md  clonepilot_marketing_kit.json  pyproject.toml  smithery.yaml  x_thread_result.json
.github/: FUNDING.yml
.github/workflows/: publish.yml
docs/: INSTALL.md  MARKETING.md  OPERATIONS.md  RESEND_DOMAIN_VERIFICATION.md  SMITHERY.md  SPONSORS_SETUP.md
e2e_artifacts/: deep_analysis_e2e.json  i18n_sample.json
gallery_site/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
gallery_site/app/: WaitlistForm.tsx  globals.css  layout.tsx  page.tsx
gallery_site/app/install/: ConfigSnippet.tsx  page.tsx
gallery_site/app/pricing/: UpgradeForm.tsx  page.tsx
gallery_site/components/: HeroAtoms.tsx  HeroSection.tsx  LangToggle.tsx  LangToggleGlobal.tsx  RevenueChart.tsx  SiteChrome.tsx  UrlAnalysisForm.tsx  UsViralGallery.tsx
gallery_site/lib/: analyze-cache.ts  analyze-signals.ts  i18n-card-v2.ts  i18n-install.tsx  i18n-pricing.tsx  i18n-report.tsx  i18n.tsx  lang.ts  llm-fallback.ts  report.server.ts  report.ts
gallery_site/public/: us-viral-videos.json
scripts/: auto_demo_loop.py  auto_queue.txt  daily_digest.py  dashboard.py  deploy_gallery.py  e2e.py  e2e_phase2.py  e2e_phase3.py  generate_clonepilot_kit.py  install_scheduler.ps1  post_x_thread.py  publish_smithery.py  run_forever.ps1  run_forever.sh  seed_gallery.py
src/clonepilot/: __init__.py  config.py  license.py  server.py
tests/: test_forecast.py
(+43 files in other folders)
