[project]
name = "clonepilot"
version = "0.1.0"
description = "MCP server that turns a YouTube business video into a deployed MVP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ClonePilot" }]
dependencies = [
    "fastmcp>=0.4.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "youtube-transcript-api>=0.6.2",
    "stripe>=11.0.0",
    "pytrends>=4.9.2",
]

[project.scripts]
clonepilot = "clonepilot.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clonepilot"]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "praw>=7.8.1",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "tweepy>=4.16.0",
]
